# bmad-mcp-server

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .releaserc.json  .workflow-status.yaml  AGENTS.md  CHANGELOG.md  NOTES.md  PR-v4.0.0.md  QUICKSTART.md  QUICK_START.md  README.md  commitlint.config.cjs  docker-compose.yml  eslint.config.mjs  jest.config.cjs  jest.config.js  mcp_claude_test_harness.py  package-lock.json  package.json  playwright.config.d.ts  playwright.config.js  playwright.config.ts  pyproject.toml  test-agent-metadata.mjs  test-integration.mjs  test-list-agents.mjs  test-litellm.mjs  test-path-resolution.mjs  test-prompts.json  test-source-protection.mjs  test-strict-mode.mjs  tsconfig.json  tsconfig.test.json  vitest.config.llm.ts  vitest.config.ts
.bmad/: master-manifest.json
.github/: CODEOWNERS  RELEASE_PROCESS.md  RELEASE_WORKFLOW_DIAGRAM.md  dependabot.yml  pull_request_template.md
.husky/: pre-commit
docs/: AGENT_ALIASES.md  QUICK_REFERENCE.md  README.md  api-contracts.md  api.md  architecture.md  behavior-quality-standards.md  bmad-git-url-integration.md  bmad-v6-format-comparison.md  bmm-index.md  bmm-workflow-status.yaml  cli-guide.md  cli-testing-guide.md  completions-guide.md  copilot-cli-experiment-results.md  copilot-cli-session-analysis.md  copilot-cli-tool-calling-test.md  decision-tool-calling-approach.md  deployment-guide.md  development-guide.md  development.md  e2e-project-completion-summary.md  e2e-testing-quickstart.md  e2e-testing-roadmap.md  e2e-testing-status.md  execute-response-proposal.md  git-cache-strategy.md  index.md  installation.md  llm-test-view-mockup.md  mcp-capabilities-reference.md  mcp-response-formatting.md  path-discovery-troubleshooting.md  performance-slas.md  prd.md  progress-update-20251109.md  project-overview.md  project-scan-report.json  prompts-guide.md  quality-dashboard.md  (+19 more)
scripts/: README.md  bmad-cli.mjs  compare-test-results.sh  copy-bmad.mjs  debug-workflow-matching.mjs  establish-performance-baseline.mjs  establish-quality-baseline.mjs  export-manifest.ps1  generate-html-report.mjs  generate-performance-dashboard.mjs  generate-quality-dashboard.mjs  generate-session-report.mjs  guard-src-js.mjs  metrics-summarize.mjs  optimize-sample-payload.mjs  run-bmad.mjs  run-stability-test.sh  show-doctor.mjs  show-list-agents.mjs  show-list-resources.mjs  show-list-workflows.mjs  show-tool-description.mjs  show-tool-output.mjs  test-agent-based-workflows.mjs  test-agent-execution.mjs  test-agent-format.mjs  test-agent-response.mjs  test-all-commands.mjs  test-ambiguous-responses.mjs  test-bmad-resources.mjs  test-bmad-test-server.mjs  (+26 more)
(+715 files in other folders)
